# forestools

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package.json
docs/: ZTools应用搜索图标显示逻辑调研报告.html  ztools-full-feature-report.html  ztools-plugin-report.html  ztools-quick-launch-report.html
scripts/: gen-icon.mjs
src/: App.vue  app.rs  app_launcher.rs  icon.rs  main.rs  search.rs  theme.rs  window_ctl.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_launcher.rs  icon.rs  lib.rs  main.rs
src/app/: drag.rs  fonts.rs  mod.rs  state.rs  tray.rs  ui.rs  update.rs
src/components/: TimestampPanel.vue
src/icon/: cache.rs  mod.rs  platform.rs
src/launcher/: launch.rs  mod.rs  model.rs  scan.rs
src/lib/: apps.ts
src/search/: index.rs  mod.rs  query.rs
src/theme/: colors.rs  mod.rs
src/window/: mod.rs  ops.rs  position.rs  screen.rs
